make detail page for each post and make dynamic link for them

--- a/first_projecct/blog/templates/htmls_file/home.html
+++ b/first_projecct/blog/templates/htmls_file/home.html
@@ -6,11 +6,11 @@
 
 <center>
 
-      {%for human in post %}
-        <div class="" width="200">
-          <h2>{{human.title}}</h2>
-          <p></p>
-          <small>{{human.publish}}</small>
+      {%for post in posts %}
+        <div width="200">
+          <a href="/home/{{post.slug}}" >{{post.title}}</a>
+          <h2>{{post.title}}</h2>
+          <small>{{post.publish}}</small>
         </div>
           <br>
       {% endfor %}
