--- a/first_projecct/blog/templates/htmls_file/home.html
+++ b/first_projecct/blog/templates/htmls_file/home.html
@@ -19,8 +19,9 @@
                       <div class="card-body">
                           <div class="small text-muted">{{post.publish}}</div>
                           <h2 class="card-title h4">{{post.title}}</h2>
+                          <p class="card-text">{{post.creator.first_name}}</p>
                           <p class="card-text">{{post.descriptions | truncatewords:10}}</p>
-                          <a class="btn btn-primary" href="urls 'blog,details'">Read more →</a>
+                          <a class="btn btn-primary" href="{%url 'blog:details' post.slug%}">Read more →</a>
                       </div>
                   </div>
 
