--- a/first_projecct/blog/templates/htmls_file/details.html
+++ b/first_projecct/blog/templates/htmls_file/details.html
@@ -25,8 +25,10 @@
 
               <div class="container"  id="cont" width="200">
                 <h2>{{post_detail.title}}</h2>
-                <p>{{post_detail.descriptions}}</p>
-                <small>{{post_detail.publish}}</small>
+                <p>{{post_detail.descriptions | linebreaks}}</p>
+                <p>{{post_detail.category.title}}</p>
+                <p>{{post_detail.jalali_get_publish}}</p>
+
               </div>
                 <br>
 
