--- a/first_projecct/blog/templates/htmls_file/home.html
+++ b/first_projecct/blog/templates/htmls_file/home.html
@@ -17,10 +17,13 @@
                   <div class="card mb-3">
                       <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
                       <div class="card-body">
-                          <div class="small text-muted">{{post.publish}}</div>
+                          <div class="small text-muted">{{post.jalali_get_publish}}</div>
                           <h2 class="card-title h4">{{post.title}}</h2>
                           <p class="card-text">{{post.creator.first_name}}</p>
                           <p class="card-text">{{post.descriptions | truncatewords:10}}</p>
+                            {%for cat in post.category.all%}
+                            <p class="card-text">#{{cat.title}}</p>
+                            {%endfor%}
                           <a class="btn btn-primary" href="{%url 'blog:details' post.slug%}">Read more →</a>
                       </div>
                   </div>
