--- a/first_projecct/blog/static/css/s.css
+++ b/first_projecct/blog/static/css/s.css
@@ -1399,6 +1399,7 @@ progress {
 
   .col-lg-8 {
     flex: 0 0 auto;
+    justify-content: center;
     width: 66.66666667%;
   }
 
@@ -4510,13 +4511,14 @@ textarea.form-control-lg {
 .card {
   position: relative;
   display: flex;
+  justify-content: center;;
   flex-direction: column;
   min-width: 0;
-  max-width: 500;
+  max-width: 500px;
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  border: 3px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
 }
 .card > hr {
@@ -4543,8 +4545,9 @@ textarea.form-control-lg {
 }
 
 .card-body {
-  flex: 1 1 auto;
+  flex: 1 1 ;
   padding: 1rem 1rem;
+  width: 400px;
 }
 
 .card-title {
@@ -4608,7 +4611,7 @@ textarea.form-control-lg {
 .card-img,
 .card-img-top,
 .card-img-bottom {
-  width: 50%;
+  width: 100%;
 }
 
 .card-img,
@@ -11274,7 +11277,7 @@ textarea.form-control-lg {
   .d-print-table-cell {
     display: table-cell !important;
   }
-
+  card
   .d-print-flex {
     display: flex !important;
   }
