--- a/first_projecct/blog/templates/htmls_file/base.html
+++ b/first_projecct/blog/templates/htmls_file/base.html
@@ -12,7 +12,7 @@
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         {%block style%} {%endblock%}
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="{%static 'css/styles.css'%}" rel="stylesheet" />
+        <link href="{%static 'css/base.css'%}" rel="stylesheet" />
     </head>
     <body>
         <!-- Responsive navbar-->
