make pageinator and make btn for it , get object from pageinator

--- a/first_projecct/blog/static/css/base.css
+++ b/first_projecct/blog/static/css/base.css
@@ -4914,6 +4914,7 @@ textarea.form-control-lg {
 
 .alert {
   position: relative;
+  width: 40px;
   padding: 1rem 1rem;
   margin-bottom: 1rem;
   border: 1px solid transparent;
