--- a/first_projecct/blog/templates/htmls_file/category.html
+++ b/first_projecct/blog/templates/htmls_file/category.html
@@ -7,6 +7,7 @@
             <div class="row">
                 <!-- Blog entries-->
                 <div class="col-lg-8">
+                    {% comment %} <h3 class="alert alert-primary">{{category.title}}</h3> {% endcomment %}
                     <!-- Featured blog post-->
 
                     <!-- Nested row for non-featured blog posts-->
