--- a/first_projecct/blog/templates/blog/article_list.html
+++ b/first_projecct/blog/templates/blog/article_list.html
@@ -1,4 +1,4 @@
-{%extends 'htmls_file/base.html'%}
+{%extends 'blog/base.html'%}
 
 
 {%block main%}
@@ -11,7 +11,7 @@
 
                     <!-- Nested row for non-featured blog posts-->
 
-                  {%for post in posts%}
+                  {%for post in object_list%}
 
 
                   <div class="card mb-3">
@@ -24,7 +24,7 @@
                             {%for cat in post.show_category.all%}
                             <p class="card-text">#{{cat.title}}</p>
                             {%endfor%}
-                          <a class="btn btn-primary" href="{%url 'blog:details' post.slug%}">Read more →</a>
+                          <a class="btn btn-primary" href="{%url 'blog:Details' post.slug%}">Read more →</a>
                       </div>
                   </div>
 
@@ -41,12 +41,12 @@
                     <!-- Categories widget-->
                     <!-- Side widget-->
                 </div>
-                {% if posts.has_next %}
-                    <a class="btn btn-primary mb-3" href="{% url "blog:home"  posts.next_page_number%}"> new &rarr;</a>
+                {% if page_obj.has_next %}
+                    <a class="btn btn-primary mb-3" href="{% url "blog:home"  page_obj.next_page_number%}"> new &rarr;</a>
                 {% endif %}
 
-                {% if posts.has_previous %}
-                <a class="btn btn-primary mb-3 ml-3" href="{% url "blog:home" posts.previous_page_number %}"> previous post &larr;</a>
+                {% if page_obj.has_previous %}
+                <a class="btn btn-primary mb-3 ml-3" href="{% url "blog:home" page_obj.previous_page_number %}"> previous post &larr;</a>
                 {% endif %}
             </div>
         </div>
