--- a/first_projecct/blog/templates/blog/partial/category_loop.html
+++ b/first_projecct/blog/templates/blog/partial/category_loop.html
@@ -1,10 +1,12 @@
+
+
 {%for cat in cat.children.all%}
 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-    <li class="nav-item">
+    {% comment %} <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="{%url "blog:category" cat.slug %}">{{cat.title}}</a>
         {%if cat.children.all%}
             {% include "htmls_file/partial/category_loop.html" %}
         {%endif%}
-    </li>
+    </li> {% endcomment %}
 </ul>
 {%endfor%}
