--- a/first_projecct/templates/blog/partial/navbar_tag.html
+++ b/first_projecct/templates/blog/partial/navbar_tag.html
@@ -1,7 +1,7 @@
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link" href="{%url 'blog:home'%}">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="{%url 'account:logout_user' %}">logout</a></li>
+        {% comment %} <li class="nav-item"><a class="nav-link" href="{%url 'account:logout_user' %}">logout</a></li> {% endcomment %}
         <li class="nav-item"><a class="nav-link" aria-current="page" href="{%url "blog:home"%}">Blog</a></li>
         {%for cat in category%}
             {%if cat.parent == None%}
