--- a/first_projecct/templates/registration/login.html
+++ b/first_projecct/templates/registration/login.html
@@ -1,6 +1,23 @@
- <form method="post">{% csrf_token %} {% comment %} سی اس ار اف توکن های جنگو برای مقابله با حملات  {% endcomment %}
-    {{form.as_p}}
-    <button typr="submit">login</button>
+{%load static%}
 
-</form>
+<!DOCTYPE html>
+<link rel="stylesheet" href="{%static "account/login.css"%}">
+<body>
+
+	<div class="login">
+	<form method="post"> {% csrf_token %} 
+		{{form.username}}
+		{{form.password}}
+		<input type="submit" value="Sign In">
+	</form>
+	
+	  <a href="#" class="forgot">forgot password?</a>
+
+	</div>
+	<div class="shadow"></div>
+	
+	<script src="{%static "account/login.js"%}"></script>
+</body>
+
+
 
