crate a panel for show article to our admin panel and create a page for write a new article and send informations to models

--- a/first_projecct/static/blog/css/base.css
+++ b/first_projecct/static/blog/css/base.css
@@ -639,6 +639,7 @@ progress {
   padding-left: var(--bs-gutter-x, 0.75rem);
   margin-right: auto;
   margin-left: auto;
+  background-image: url("");
 }
 
 @media (min-width: 576px) {
@@ -11294,4 +11295,7 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
+}
+img{
+    width:500px !important;
 }
