--- a/first_projecct/templates/blog/base.html
+++ b/first_projecct/templates/blog/base.html
@@ -31,13 +31,15 @@
         </nav>
         <!-- Page header with logo and tagline-->
         <header class="py-5 bg-light border-bottom mb-4">
+            <div class="text-center my-5 my">
             <div class="container">
-                <div class="text-center my-5">
+                    {% comment %} <img src="{%static 'media/home_page.jpg'%}" alt="Dinosaur" /> {% endcomment %}
                     <h1 class="fw-bolder">Welcome to Blog Home!</h1>
                     <p class="lead mb-0">A Bootstrap 5 starter layout for your next blog homepage</p>
                 </div>
             </div>
         </header>
+
 
         {%block main %}
 
