--- a/first_projecct/templates/registration/home.html
+++ b/first_projecct/templates/registration/home.html
@@ -1,3 +1,51 @@
 {% extends 'registration/base.html' %}
+{%block title%}show articles{%endblock%}
 
-hello its me {{user.get_full_name}}
+
+{%block main%}
+<div class="my">
+    <h5  class="m-0" >welcome {{user.get_full_name}}</p> 
+</div>
+
+<div class="cont">
+    <table class="table">
+        <thead>
+        <tr>
+          <th>title</th>
+          <th>author</th>
+          <th>slug</th>
+          <th>categorys</th>
+          <th>date</th>
+          <th>status</th>
+        </tr>
+        </thead>
+
+        {%for article in object_list%}     {% comment %} نمایش مقالات در صفحه ادمین خودمون object_list به صورت پیش فرض برای کلس بیس ویو ها هستش{% endcomment %}
+        <tr>
+            <td>
+                {% if article.status == 'p' %}
+                    <a href="{% url 'blog:Details' article.slug %}">{{article.title}}</a>
+                {% else %}
+                <a href="#">{{article.title}}</a>
+                {% endif %}
+            </td>
+            <td>{{article.author}}</td>
+            <td>{{article.slug}}</td>
+            <td>
+                <div class="sparkbar" data-color="#00a65a" data-height="20">{{article.category_to_str}}</div>
+            </td>
+            <td>{{article.jalali_get_publish}}</td>
+            <td>
+                {%if article.status == "p"%}
+                    <span class="badge badge-success"> published</span>
+                {%else%}
+                    <span class="badge badge-danger"> draft</span>
+                {% endif %}
+
+            </td>
+
+        </tr>
+        {%endfor%}
+      </table>
+</div>
+{%endblock%}
