--- a/first_projecct/templates/registration/create_article.html
+++ b/first_projecct/templates/registration/create_article.html
@@ -1,4 +1,5 @@
 {% extends 'registration/base.html' %}
+{% load crispy_forms_tags %}  <!--لود کریس پای برای استایل دهی به فرم های جنگو-->
 
 {% block title %}
     create article
@@ -6,9 +7,64 @@
 
 
 {% block main %}
- <form method="post">{%csrf_token%} {% comment %} ارسال اطلاعات از طریق متد پست و تگ فرم   {% endcomment %}
 
-    {{form.as_p}}       {% comment %} این فرم رو خود جنگو میسازه از ویو کریت ارتیکل و میزاره ما اطلاعات رو بفرستم روی مدل ها {% endcomment %}
-    <button class="btn btn-success"> send article </button>
-</form>
+
+<div class="card card-primary">
+    <div class="card-header">
+      <h3 class="card-title">info of article</h3>
+    </div>
+    <!-- /.card-header -->
+    <!-- form start -->
+    <form method="post">{%csrf_token%}
+      <div class="card-body">
+        <div class='row'>
+            <div class='col-1'>
+                {{form.author|as_crispy_field}}
+            </div>
+            <div class='col-3 ml-5'>
+                {{form.title|as_crispy_field}}
+            </div>
+        </div>
+        <div class='row'>
+            <div class='col-4'>
+                {{form.slug|as_crispy_field}}
+            </div>
+            <div class='col-4'>
+                {{form.publish|as_crispy_field}}
+            </div>
+        </div>
+        <div class='row'>
+            <div class='col-6'>
+                {{form.category|as_crispy_field}}
+            </div>
+            <div class='col-6'>
+                {{form.status|as_crispy_field}}
+            </div>
+        </div>
+        <div class='row'>
+            <div class='col-9'>
+                {{form.descriptions|as_crispy_field}}
+            </div>
+         </div>
+      </div>
+      <!-- /.card-body -->
+
+      <div class="card-footer">
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
+    </form>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 {% endblock %}
