--- a/first_projecct/templates/registration/sidebar.html
+++ b/first_projecct/templates/registration/sidebar.html
@@ -41,8 +41,8 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="./index.html" class="nav-link active">
-                  <i class="far fa-circle nav-icon"></i>
+                <a href="{%url 'account:create'%}" class="nav-link active">
+                  <i class="nav-icon fas fa-edit"></i>
                   <p>write new one</p>
                 </a>
               </li>
