--- a/first_projecct/templates/blog/base.html
+++ b/first_projecct/templates/blog/base.html
@@ -19,6 +19,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <a class="navbar-brand" href="#!">
+                {% comment %} {%     print(request.user.first_name) %} {% endcomment %}
                   {{request.user.first_name}}
                   {{request.user.last_name}}
                 </a>
