write logout view and redirect after that to link we want

--- a/first_projecct/templates/blog/base.html
+++ b/first_projecct/templates/blog/base.html
@@ -5,6 +5,10 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+        <script src="https://kit.fontawesome.com/f24531a6b0.js" crossorigin="anonymous"></script>
+        {% comment %} use fontawasome......... {% endcomment %}
+        
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>blog | {%block title%}  {%endblock%}</title>
@@ -41,7 +45,7 @@
             </div>
         </header>
 
-
+        
         {%block main %}
 
         {%endblock%}
