--- a/first_projecct/templates/blog/base_list.html
+++ b/first_projecct/templates/blog/base_list.html
@@ -12,7 +12,7 @@
 
 
         <!-- Page content-->
-        <div class="container">
+        <div class="container ">
             <div class="row">
                 <!-- Blog entries-->
                 <div class="col-lg-8">
@@ -24,7 +24,7 @@
 
 
                   <div class="card mb-3">
-                      <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                      {% comment %} <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a> {% endcomment %}
                       <div class="card-body">
                           <div class="small text-muted">{{post.jalali_get_publish}}</div>
                       </br>
