--- a/first_projecct/templates/registration/base.html
+++ b/first_projecct/templates/registration/base.html
@@ -7,6 +7,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>AdminLTE 3 | Dashboard</title>
+
+  <script src="https://kit.fontawesome.com/f24531a6b0.js" crossorigin="anonymous"></script>
+   {% comment %} use fontawasome......... {% endcomment %}
   
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -14,6 +17,7 @@
   <link rel="stylesheet" href="{% static 'registration/adminLTE/plugins/fontawesome-free/css/all.min.css' %}">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+
   <!-- Tempusdominus Bootstrap 4 -->
   <link rel="stylesheet" href="static/registration/adminLTE/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
   <!-- iCheck -->
@@ -40,9 +44,15 @@
   <nav class="main-header navbar navbar-expand navbar-white navbar-light">
     <!-- Left navbar links -->
     <ul class="navbar-nav">
+
       <li class="nav-item">
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
       </li>
+
+      <li class="nav-item">
+        <a class="nav-link " href="{% url "account:logout" %}" role="button"><i class="fa fa-sign-out" aria-hidden="true"> logout</i></a>
+      </li>
+
       <li class="nav-item d-none d-sm-inline-block">
         <a href="{% url 'blog:home' %}" class="nav-link">Home</a>
       </li>
@@ -89,6 +99,8 @@
   <!-- /.content-wrapper -->
   <footer class="main-footer">
     <strong>my admin page to learn django</strong>
+    {{request.resolver_match}}
+    {{request }}
   </footer>
 
   <!-- Control Sidebar -->
