send user to form using kwargs

--- a/first_projecct/templates/registration/make_profile.html
+++ b/first_projecct/templates/registration/make_profile.html
@@ -47,7 +47,7 @@
       <!-- /.card-body -->
 
       <div class="card-footer">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">save</button>
 
         {% if user.is_superuser %}
 
